# SoftwareRasterizer

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  DELETE OMP_WAIT_POLICY.bat  GenerateProjectFiles.bat  LICENSE  README.md  Set OMP_WAIT_POLICY=PASSIVE.bat
audio/: CMakeLists.txt
audio/inc/: Config.hpp  Decoder.hpp  DecoderWAV.hpp  Device.hpp  Listener.hpp  Sound.hpp
audio/inc/Audio/: Listener.hpp  Sound.hpp  Waveform.hpp
audio/src/: DecoderWAV.cpp  Device.cpp  Listener.cpp  ListenerImpl.cpp  ListenerImpl.hpp  Sound.cpp  SoundImpl.cpp  SoundImpl.hpp  dr_flac.h  dr_mp3.c  dr_mp3.h  dr_wav.h  minimp3.c  minimp3.h  minimp3_ext.h
engine/: CMakeLists.txt  Config.hpp  Engine.cpp  Engine.hpp  Window.cpp  Window.hpp  WindowImpl.hpp  WindowWin32.cpp  WindowWin32.hpp
engine/inc/: BlendMode.hpp  Color.hpp  Enums.hpp  Events.hpp  Font.hpp  GamePad.hpp  GamePadStateTracker.hpp  Image.hpp  Input.hpp  KeyCodes.hpp  KeyboardState.hpp  KeyboardStateTracker.hpp  Mouse.hpp  MouseState.hpp  MouseStateTracker.hpp  ResourceManager.hpp  Sprite.hpp  SpriteAnim.hpp  SpriteSheet.hpp  TileMap.hpp  Vertex.hpp  Window.hpp  WindowHandle.hpp  WindowImpl.hpp  WindowWin32.hpp  stb_image_write.h
engine/src/: BlendMode.cpp  Color.cpp  Font.cpp  GamePad.cpp  GamePadStateTracker.cpp  GamepadXInput.cpp  Image.cpp  Input.cpp  Keyboard.cpp  KeyboardState.cpp  KeyboardStateTracker.cpp  Mouse.cpp  ResourceManager.cpp  SpriteAnim.cpp  SpriteSheet.cpp  TileMap.cpp  Timer.cpp  Window.cpp  WindowWin32.cpp
engine/src/Win32/: GamepadXInput.cpp  KeyboardWin32.cpp  MouseWin32.cpp  WindowWin32.cpp  WindowWin32.hpp
graphics/: CMakeLists.txt
graphics/inc/: aligned_unique_ptr.hpp  hash.hpp
graphics/inc/Graphics/: BlendMode.hpp  Buffer.hpp  Color.hpp  Config.hpp  Events.hpp  File.hpp  Font.hpp  GamePadState.hpp  Image.hpp  Keyboard.hpp  KeyboardState.hpp  KeyboardStateTracker.hpp  Material.hpp  Mesh.hpp  Model.hpp  Mouse.hpp  Rasterizer.hpp  ResourceManager.hpp  Sprite.hpp  SpriteAnim.hpp  SpriteSheet.hpp  TileMap.hpp  Timer.hpp  Vertex.hpp  Window.hpp  WindowHandle.hpp  WindowImpl.hpp
graphics/src/: BlendMode.cpp  Color.cpp  Font.cpp  FragmentShader.glsl  GamePad.cpp  GamePadStateTracker.cpp  Image.cpp  Input.cpp  Keyboard.cpp  KeyboardState.cpp  KeyboardStateTracker.cpp  Material.cpp  Mesh.cpp  Model.cpp  Mouse.cpp  Rasterizer.cpp  ResourceManager.cpp  SpriteAnim.cpp  SpriteSheet.cpp  TileMap.cpp  Timer.cpp  Window.cpp  WindowGLFW.cpp  WindowGLFW.hpp  stb_rect_pack.h  stb_truetype.cpp  thread_pool.hpp
graphics/src/GLFW/: GamePadGLFW.cpp  KeyboardGLFW.cpp  MouseGLFW.cpp  WindowGLFW.cpp  WindowGLFW.hpp
graphics/src/Win32/: GamepadXInput.cpp  KeyboardWin32.cpp  MouseWin32.cpp  WindowWin32.cpp  WindowWin32.hpp
math/: CMakeLists.txt
math/inc/Math/: AABB.hpp  Camera2D.hpp  Camera3D.hpp  Circle.hpp  Line.hpp  Math.hpp  Plane.hpp  Rect.hpp  Sphere.hpp  Transform2D.hpp  Viewport.hpp
math/src/: Camera2D.cpp  Camera3D.cpp  Transform2D.cpp
samples/: CMakeLists.txt
samples/00-Common/: CMakeLists.txt  CameraController.cpp  CameraController.hpp
samples/01-ClearScreen/: CMakeLists.txt  main.cpp
samples/02-Triangle/: CMakeLists.txt  main.cpp
samples/03-Sprites/: CMakeLists.txt  main.cpp
samples/04-BlendModes/: CMakeLists.txt  main.cpp
samples/05-CopyImage/: CMakeLists.txt  main.cpp
samples/06-Fonts/: CMakeLists.txt  main.cpp
samples/07-Game/: CMakeLists.txt  main.cpp
samples/07-Game/inc/: Background.hpp  Box.hpp  Button.hpp  Character.hpp  Curve.hpp  Effect.hpp  Entity.hpp  Game.hpp  Level.hpp  Pickup.hpp  Player.hpp  Transition.hpp
samples/07-Game/src/: Background.cpp  Box.cpp  Button.cpp  Character.cpp  Entity.cpp  Game.cpp  Level.cpp  Pickup.cpp  Player.cpp  Transition.cpp
samples/07-PixelAdventure/: CMakeLists.txt  main.cpp
samples/07-PixelAdventure/inc/: Background.hpp  Box.hpp  Button.hpp  Character.hpp  Effect.hpp  Game.hpp  Level.hpp  Pickup.hpp  Player.hpp  Transition.hpp
samples/07-PixelAdventure/src/: Background.cpp  Box.cpp  Button.cpp  Character.cpp  Effect.cpp  Game.cpp  Level.cpp  Pickup.cpp  Player.cpp  Transition.cpp
samples/08-Audio/: Ball.cpp  Ball.hpp  CMakeLists.txt  MarioCoin.cpp  MarioCoin.hpp  main.cpp
samples/09-Arkanoid/: CMakeLists.txt  DebugSettings.vcxproj.user.in  README.md  main.cpp
samples/09-Arkanoid/inc/: Ball.hpp  Brick.hpp  Bullet.hpp  Field.hpp  Game.hpp  GameOverState.hpp  GameState.hpp  HighScoreState.hpp  HighScores.hpp  Level.hpp  MainMenuState.hpp  ParseRects.hpp  PlayState.hpp  PowerUp.hpp  State.hpp  TitleState.hpp  Vaus.hpp
samples/09-Arkanoid/src/: Ball.cpp  Brick.cpp  Bullet.cpp  Button.cpp  Field.cpp  Game.cpp  GameOverState.cpp  HighScoreState.cpp  HighScores.cpp  Level.cpp  MainMenuState.cpp  Paddle.cpp  ParseRects.cpp  Physics.cpp  PlayState.cpp  PowerUp.cpp  Stages.hpp  TitleState.cpp  Vaus.cpp
samples/09-Breakout/: CMakeLists.txt  main.cpp
samples/09-Breakout/inc/: Ball.hpp  Button.hpp  Game.hpp  MainMenuState.hpp  Paddle.hpp  Physics.hpp  PlayState.hpp  State.hpp
samples/09-Breakout/src/: Ball.cpp  Button.cpp  Game.cpp  MainMenuState.cpp  Paddle.cpp  Physics.cpp  PlayState.cpp
samples/10-Camera/: CMakeLists.txt  main.cpp
samples/11-Cube/: CMakeLists.txt  main.cpp
samples/11-Quad/: CMakeLists.txt  main.cpp
samples/11-Rasterizer/: CMakeLists.txt  main.cpp
samples/12-ImGui/: CMakeLists.txt  main.cpp
samples/assets/Arkanoid/: Arkanoid-Walkthrough — StrategyWiki, the video game walkthrough and strategy guide wiki.url  Reference.psd  Source.txt  blocks.xml  fields.xml  high_scores.txt  powerups.xml  vaus.psd  vaus.xml
samples/assets/Breakout/: License.txt
samples/assets/Breakout/Sprite Sheet/: Breakout_Tile_Free.xml
samples/assets/Pixel Adventure/: Pixel Adventure 2 by Pixel Frog.url  Pixel Adventure by Pixel Frog.url  Pixel Adventure.ldtk  Reference (Level 3).psd  Reference.psd
samples/assets/fonts/: gb_rm1.html  gbb__.tga
samples/assets/models/: cube.mtl
samples/assets/sounds/: sources.txt
samples/assets/textures/: Sources.txt
(+3 files in other folders)
